# ethos

./: CMakeLists.txt  README.md  build.sh  dev.sh  layout.ld  monitor.sh  risvc.svd  run.sh  startup.sh  stop.sh
.run/: Debug Arvos.run.xml  arvos.run.xml
docs/: Others'work.md  README.md
kernel/: console.c  console.h  entry.asm  layout.h  layout.ld  main.c  memlayout.h  riscv.h  start.c  vmm.c  vmm.h
kernel/libk/: README.md  memcpy.c  vprintf.c
kernel/libk/include/: assert.h  auxval.h  stdbool.h
kernel/libkc/: getchar.c  memset.c  putchar.c
kernel/libkc/include/: assert.h  list.h
libc/: ctz.c  getchar.c  putchar.c  strcmp.c  vsnprintf.c
libc/include/: assert.h  kc.h  stdbits.h  stdbool.h
libkc/: clz.c  console.c  console.h  getchar.c  memcmp.c  printf.c  putchar.c  puts.c  snprintf.c  strlen.c  strncmp.c  strncpy.c
libkc/include/: elf.h  stdatomic.h  stdbits.h  stdio.h
